# kiara-slm-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  HUGGING_FACE_FIX.md  LICENSE  Makefile  README.md  SETUP_COMPLETE.md  STRUCTURE_SUMMARY.txt  TUTORIAL.md  create_demo_checkpoint.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  train_quickstart.py  train_quickstart.py.backup
.github/workflows/: hf-spaces-sync.yml
configs/: default.yaml  large.yaml  small.yaml
data/: sample_data.txt
documentation/: API.md  CONFIGURATION.md  HUGGING_FACE_SPACES.md  MIGRATION_GUIDE.md  PRODUCTION_FEATURES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_PRODUCTION.md  TECHNICAL_DOCUMENTATION.md
hf_spaces/: README.md  app.py  requirements.txt
notebooks/: getting_started.md
scripts/: __init__.py  deploy_to_hf.sh  evaluate.py  generate.py  serve.py  test_spaces.py  train.py
src/: attention.py  model.py  tokenizer.py
src/kiara/: __init__.py  config.py  model.py  training.py
src/kiara/cli/: __init__.py  evaluate.py  generate.py  train.py
src/kiara/utils/: __init__.py  checkpoint.py  logging.py  metrics.py
tests/: __init__.py  test_config.py  test_model.py  test_training.py  test_utils.py
